<resources>
    <string name="disclaimer_terms_condition">이 약관은 삼성전자주식회사(이하 \"Samsung\")가 제공하는 ChatON 서비스(이하 \"서비스\")의 이용과 관련하여 Samsung과 고객과의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다. 본 약관은 Samsung 서비스 이용약관에 대한 특별약관입니다. 따라서 본 약관과 Samsung서비스 이용약관이 충돌할 경우 본 약관이 우선하며, 본 약관에 규정되지 아니한 사항은 Samsung 서비스 이용약관에 기재된 바에 의합니다.\n 서비스 가입방법\n Samsung 또는 고객의 서비스 해지방법\n 1 이용약관 동의 및 서비스 가입신청\n 1.1 Samsung은 이 약관의 내용을 회원이 쉽게 알 수 있도록 단말기상 ChatON 접속화면에 게시합니다.\n 1.2. 고객이 서비스를 이용하려면 ChatON 서비스 이용약관(이하 \"특별약관\") 및 Samsung서비스이용약관(\"기본약관\")에 동의하여야 하며(특별약관과 기본약관을 통칭하여 \"이용약관\"), 이용약관 동의 후 이용자 이름을 입력함으로써 가입을 신청합니다.\n 1.3. 본 서비스는 법정대리인(부모 등)의 동의를 얻은 14세 미만 아동 또는 미성년자에게도 제공될 수 있습니다.\n</string>
    <string name="disclaimer_accept_use">1. 개인정보 수집항목 \n 필수사항 : 이름, 휴대폰 번호, 서비스 이용기록, 접속 로그, 쿠키, 접속 IP 정보, 국가, 기기 고유번호,기기 내에 저장된 제3자의 전화번호, 법정대리인의 이름 및 전화번호(14세 미만 아동의 경우)\n - 선택사항 : 프로필사진, 상태메시지\n 2. 수집·이용목적 \n 서비스 제공, 본인 확인 등 회원관리, 신규 서비스 개발 및 마케팅에 활용\n 3. 보유·이용기간\n 서비스 이용 중단(계정 삭제)시까지\n ※ 귀하께서는 귀하의 개인정보 수집·이용에 대한 동의를 거부하실 권리가 있으며, 동의를 거부하실 경우 서비스 이용이 제한됩니다.\n</string>
    <string name="disclaimer_privacy_policy">\"삼성전자주식회사\" 은 (이하 \"회사\"는) 고객님의 개인정보를 중요시하며, \"정보통신망 이용촉진 및 정보보호\"에 관한 법률을 준수하고 있습니다.\n 회사는 개인정보취급방침을 통하여 고객님께서 제공하시는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.\n 회사는 개인정보취급방침을 개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.\n o 본 방침은 : 2012 년 05 월 14 일 부터 시행됩니다.\n 회사는 회원가입, 상담, 서비스 신청 등등을 위해 아래와 같은 개인정보를 수집하고 있습니다.\n o 수집항목 : 이름 , 휴대전화번호 , 서비스 이용기록 , 접속 로그 , 쿠키 , 접속 IP 정보 , 기기 내에 저장된 제3자의 전화번호, 프로필 사진, 상태 메시지, 국가, 기기 고유 번호 , 법정대리인 이름 , 법정대리인 휴대전화번호\n o 개인정보 수집방법 : 서비스 가입 및 사용 중 이용자의 자발적 제공, 서비스 실행 또는 사용시 자동수집\n</string>
    <string name="disclaimer_privacy_policy_header">개인정보 취급 방침</string>
    <string name="disclaimer_accept_use_header">개인정보 수집 및 이용에 대한 동의</string>
    <string name="disclaimer_terms_condition_header">ChatON 서비스 이용약관</string>
    <string name="logo_url_for_facebook">http://i0.chatoncdn.com/logo1.png?rv=01</string>
    <string name="layout_chat_fragment_selectall">All</string>
    <string name="layout_chat_fragment_received">Received</string>
    <string name="layout_chat_fragment_sent">Sent</string>
    <string name="layout_chat_fragment_send">Send</string>
    <string name="layout_chat_fragment_delete">Delete</string>
    <string name="layout_chat_fragment_cancel">Cancel</string>
    <string name="layout_calendar_location">Location</string>
    <string name="layout_calendar_send">Send</string>
    <string name="layout_calendar_cancel">Cancel</string>
    <string name="list_vcalendar_today">Today</string>
    <string name="layout_regist_country_registration">Registration</string>
    <string name="layout_regist_country_code">Select country code</string>
    <string name="layout_regist_select_country_code_if_differs">Select country code if it differs from yours</string>
    <string name="layout_scribble_send">Send</string>
    <string name="layout_scribble_cancel">Cancel</string>
    <string name="app_name">ChatON</string>
    <string name="label">ChatON</string>
    <string name="regist_inputPno">Register your phone number</string>
    <string name="regist_inputPno2">Enter phone number in international format</string>
    <string name="regist_already_regist">Already registered</string>
    <string name="regist_name">Name</string>
    <string name="regist_name_detail">Enter your real name so your friends can recognise you easily</string>
    <string name="dialog_approve">Approve</string>
    <string name="dialog_provision_ing">Loading...</string>
    <string name="dialog_userprofile_updating">Saving</string>
    <string name="dialog_connecting_server">Loading...</string>
    <string name="menu_chat_close">Close chat</string>
    <string name="menu_chat_delete">Delete</string>
    <string name="search_location">Enter location</string>
    <string name="setting_category_general">General</string>
    <string name="setting_category_privacy">Privacy</string>
    <string name="setting_category_display">Display</string>
    <string name="setting_category_notification">Notification</string>
    <string name="setting_category_backup_sync">Backup and sync</string>
    <string name="settings_about">About ChatON</string>
    <string name="settings_help">Help</string>
    <string name="settings_invite_friend">Tell friends</string>
    <string name="settings_blocked">Block list</string>
    <string name="settings_relationship_hide">Hidden interactions</string>
    <string name="settings_delete">Delete account</string>
    <string name="settings_change_skins">Change skin</string>
    <string name="setting_delete_account">ChatON account: %s</string>
    <string name="setting_btn_delete_account_txt">Delete account</string>
    <string name="setting_delete_account_warning">All your ChatON data will be deleted</string>
    <string name="settings_chat_view_font_size">Font size</string>
    <string name="settings_birthday_category">Birthdays</string>
    <string name="settings_push_notification">Push notification</string>
    <string name="settings_type">Alert type</string>
    <string name="settings_title_downloads">Downloads</string>
    <string name="settings_title_more_apps">More apps</string>
    <string name="setting_downloads_chaton_v">ChatON V</string>
    <string name="setting_downloads_games">Games</string>
    <string name="anicon_download_list_title">Anicon</string>
    <string name="anicon_download_detail_title">Anicon details</string>
    <string name="anicon_file_downloading">Downloading...</string>
    <string name="anicon_file_download_fail">Download failed</string>
    <string name="last_message_me_anicon">Me: Anicon</string>
    <string name="send_anicon_to_you">%s sent Anicon to you</string>
    <string name="emoticon_recently_used_empty_title">No recently used emoticons</string>
    <string name="anicon_recently_used_empty_title">No recently used Anicons</string>
    <string name="anicon_no_downloaded_title">No downloaded Anicons</string>
    <string name="anicon_package_downloaded">Downloaded</string>
    <string name="settings_received_message">Preview</string>
    <string name="settings_received_message_summary">Show part of message when alerted</string>
    <string name="settings_sync_contacts">Sync Contacts</string>
    <string name="settings_sync_now">Sync now</string>
    <string name="setting_selfsms_alert_title">Phone number verification</string>
    <string name="setting_selfsms_time">Time</string>
    <string name="setting_selfsms_chaton_start">Start ChatON</string>
    <string name="dialog_relrase">All your ChatON data will be deleted</string>
    <string name="settings_selfsms_alert_text">Send SMS to %s to verify phone number automatically. It may take a while to receive SMS</string>
    <string name="settings_selfsms_receive_failure_text">Unable to approve your phone number. Try to approve using verification code?</string>
    <string name="setting_selfsms_retry">Retry</string>
    <string name="setting_tell_friends">Send a download link to your friends so they can install ChatON</string>
    <string name="setting_about_version_checking">Check for latest version of ChatON</string>
    <string name="setting_about_disclaimer_txt">Your use of ChatON services is governed by the ChatON Terms of service and privacy policy</string>
    <string name="setting_about_btn1_text">Terms and privacy</string>
    <string name="setting_disclaimer_terms">Terms and conditions</string>
    <string name="setting_disclaimer_policy">Privacy policy</string>
    <string name="setting_disclaimer_accept">Accept</string>
    <string name="setting_upgrade_text">Upgrade</string>
    <string name="setting_chaton_tell_friends_email_subject">Download ChatON for your device</string>
    <string name="setting_chaton_tell_friends_email_text">Hi. Let\'s keep in touch using ChatON. %s</string>
    <string name="menu_inbox_group_chat">Group chat</string>
    <string name="menu_inbox_broadcast">Broadcast</string>
    <string name="menu_inbox_setting">Settings</string>
    <string name="menu_chat_insert">Insert</string>
    <string name="toast_contact_not_saved">Failed to save contact</string>
    <string name="toast_contact_create_failed">Failed to add contact</string>
    <string name="toast_contact_create_success">Contact added</string>
    <string name="mypage_buddies_say">Buddies say</string>
    <string name="settings_push_status">Push status</string>
    <string name="settings_alert_vibration_melody">Vibration and melody</string>
    <string name="settings_popup_notifications">Pop-up notifications</string>
    <string name="settings_popup_information">Pop-ups inform you when messages arrive</string>
    <string name="setting_phone_number_privacy">Phone number privacy</string>
    <string name="setting_birthday_text">Be automatically informed about your buddies\' birthdays</string>
    <string name="push_notification_text">Allows message notifications when you are not using ChatON</string>
    <string name="setting_header_notifications">Notifications</string>
    <string name="setting_body_notifications">Notifications</string>
    <string name="settings_alert_tone">Notification ringtone</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_vibration">Vibration</string>
    <string name="setting_category_notice">Notice</string>
    <string name="contact_us">Contact us</string>
    <string name="interaction_setting_hide_interactions">Hide interactions</string>
    <string name="recommendation">Suggestions</string>
    <string name="settings_password_lock">Password lock</string>
    <string name="settings_password_lock_text_off">Off</string>
    <string name="settings_password_lock_change">Change password</string>
    <string name="label_for_passlock_hint">Password hint</string>
    <string name="description_for_passlock_hint">Set password hint</string>
    <string name="setting_enter_key_title">Use the enter key to send</string>
    <string name="tellfriends_via_message">Messages</string>
    <string name="tellfriends_via_facebook">Facebook</string>
    <string name="tellfriends_via_twitter">Twitter</string>
    <string name="buddies_say_suggestion_positive">Your buddies say list will only be visible to selected buddies</string>
    <string name="manage_buddies">Manage buddies</string>
    <string name="chat_display_settings">Chat room and display settings</string>
    <string name="setting_background_style">Background style</string>
    <string name="setting_bubble_style">Bubble style</string>
    <string name="layout_audio_send">Send</string>
    <string name="settings_suggestions_buddy_title">Buddy suggestions</string>
    <string name="settings_suggestions_buddy_description">I would like to receive buddy suggestions from ChatON</string>
    <string name="setting_suggestion_exclude_me">Exclude me</string>
    <string name="settings_suggestions_excludeme_description">I would not like to be suggested to other people</string>
    <string name="settings_suggestions_special_buddy_description">I would like to receive special buddy suggestions from ChatON</string>
    <string name="settings_title_ani_con">Ani-con</string>
    <string name="tellfriends_via_weibo">SINA Weibo</string>
    <string name="skin_bubble_download_list_title">Backgrounds and bubble styles</string>
    <string name="settings_type_summary" />
    <string name="layout_audio_stop">Stop</string>
    <string name="layout_audio_timer">00:00:00</string>
    <string name="layout_audio_discard">Discard</string>
    <string name="layout_audio_play">Play</string>
    <string name="settings_send_log">Send VOC and Log</string>
    <string name="setting_enter_key_summary_new">This option also affects the return key on external keyboards</string>
    <string name="description_for_passlock_footer">If you have forgotten your password, you need to remove your ChatON account. All data will be deleted.</string>
    <string name="menu_call">Call</string>
</resources>