<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/chaton_preference_category"
        android:title="@string/setting_category_display">
        <Preference
            android:title="@string/setting_background_style"
            android:key="pref_item_change_background"/>
        <Preference
            android:title="@string/setting_bubble_style"
            android:key="pref_item_change_bubble"/>
        <Preference
            android:title="@string/settings_chat_view_font_size"
            android:key="pref_item_font_size"/>
        <CheckBoxPreference
            android:title="@string/settings_birthday_category"
            android:key="pref_item_birthday"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/chaton_preference_category"
        android:title="@string/setting_category_general"
        android:key="setting_category_general">
        <com.sec.chaton.settings.AboutNewNotice
            android:title="@string/settings_about"
            android:key="pref_item_about"/>
        <Preference
            android:title="@string/settings_help"
            android:key="pref_item_help"/>
        <Preference
            android:title="@string/settings_invite_friend"
            android:key="pref_item_invite_friend"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/chaton_preference_category"
        android:title="@string/setting_category_privacy">
        <Preference
            android:title="@string/settings_blocked"
            android:key="pref_item_blocked"/>
        <Preference
            android:title="@string/settings_delete"
            android:key="pref_item_delete"/>
        <Preference
            android:title="@string/mypage_buddies_say"
            android:key="pref_item_buddies_say"/>
        <Preference
            android:title="@string/interaction_setting_hide_interactions"
            android:key="pref_item_hide"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/chaton_preference_category"
        android:title="@string/setting_body_notifications">
        <CheckBoxPreference
            android:title="@string/settings_push_notification"
            android:key="pref_item_push_notification"
            android:defaultValue="true"/>
        <Preference
            android:title="@string/settings_push_status"
            android:key="pref_item_push_status"/>
        <Preference
            android:title="@string/settings_type"
            android:key="pref_item_type"
            android:summary="@string/settings_alert_vibration_melody"/>
        <Preference
            android:title="@string/settings_alert_tone"
            android:key="pref_item_ringtone"
            android:defaultValue="content://settings/system/notification_sound"
            android:showDefault="true"/>
        <CheckBoxPreference
            android:title="@string/settings_received_message"
            android:key="pref_item_received_message"
            android:summary="@string/settings_received_message_summary"/>
        <CheckBoxPreference
            android:title="@string/settings_popup_notifications"
            android:key="pref_item_blackscreen_popup"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/chaton_preference_category"
        android:title="@string/setting_category_backup_sync"
        android:key="settings_category_backup_sync">
        <com.sec.chaton.settings.SyncStatePreference
            android:title="@string/settings_sync_now"
            android:key="pref_item_sync_now"/>
        <PreferenceScreen
            android:title="@string/settings_send_log"
            android:key="pref_item_send_log"/>
    </PreferenceCategory>
</PreferenceScreen>
