<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/preference_header"
        android:title="@string/setting_header_notifications"/>
    <Preference
        android:enabled="true"
        android:layout="@layout/preference_information"
        android:title="@string/settings_push_status"
        android:key="pref_item_push_status"
        style="?android:attr/preferenceInformationStyle"/>
    <CheckBoxPreference
        android:layout="@layout/preference"
        android:title="@string/settings_push_notification"
        android:key="pref_item_push_notification"
        android:summary="@string/push_notification_text"
        android:widgetLayout="@layout/preference_widget_checkbox"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:layout="@layout/preference"
        android:title="@string/settings_received_message"
        android:key="pref_item_received_message"
        android:summary="@string/settings_received_message_summary"
        android:widgetLayout="@layout/preference_widget_checkbox"
        android:dependency="pref_item_push_notification"/>
    <CheckBoxPreference
        android:layout="@layout/preference"
        android:title="@string/settings_popup_notifications"
        android:key="pref_item_blackscreen_popup"
        android:summary="@string/settings_popup_information"
        android:widgetLayout="@layout/preference_widget_checkbox"
        android:dependency="pref_item_push_notification"/>
    <Preference
        android:layout="@layout/preference_with_arrow"
        android:title="@string/settings_type"
        android:key="pref_item_type"
        android:summary="@string/settings_type_summary"
        android:dependency="pref_item_push_notification"/>
</PreferenceScreen>
