<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/preference_header"
        android:title="@string/setting_category_privacy"/>
    <CheckBoxPreference
        android:layout="@layout/preference"
        android:title="@string/setting_phone_number_privacy"
        android:key="phone_number_privacy"
        android:summary="@null"
        android:widgetLayout="@layout/preference_widget_checkbox"
        android:defaultValue="true"/>
    <Preference
        android:layout="@layout/preference_with_arrow"
        android:title="@string/settings_birthday_category"
        android:key="pref_item_birthday"/>
    <Preference
        android:layout="@layout/preference_with_arrow"
        android:title="@string/interaction_setting_hide_interactions"
        android:key="pref_item_hide"
        android:summary="@null"/>
    <Preference
        android:layout="@layout/preference_with_arrow"
        android:title="@string/mypage_buddies_say"
        android:key="pref_item_buddies_say"
        android:summary="@string/buddies_say_suggestion_positive"/>
    <Preference
        android:layout="@layout/preference_with_arrow"
        android:title="@string/settings_password_lock"
        android:key="pref_item_password_lock"
        android:summary="@string/settings_password_lock_text_off"
        android:defaultValue="false"/>
</PreferenceScreen>
