<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/preference_header"
        android:title="@string/manage_buddies"/>
    <CheckBoxPreference
        android:layout="@layout/preference"
        android:title="@string/settings_birthday_category"
        android:key="pref_item_birthday"
        android:summary="@string/setting_birthday_text"
        android:widgetLayout="@layout/preference_widget_checkbox"
        android:defaultValue="true"/>
    <Preference
        android:layout="@layout/preference_with_arrow"
        android:title="@string/settings_blocked"
        android:key="pref_item_blocked"/>
    <Preference
        android:layout="@layout/preference"
        android:title="@string/recommendation"
        android:key="pref_item_suggestions"
        android:widgetLayout="@layout/preference_widget_arrow"
        android:contentDescription="@string/recommendation"/>
</PreferenceScreen>
