<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/preference_header"
        android:title="@string/settings_password_lock"/>
    <CheckBoxPreference
        android:layout="@layout/preference"
        android:title="@string/settings_password_lock"
        android:key="pref_item_password_lock"
        android:widgetLayout="@layout/preference_widget_checkbox"
        android:defaultValue="false"/>
    <Preference
        android:layout="@layout/preference_with_arrow"
        android:title="@string/settings_password_lock_change"
        android:key="pref_item_change_password_lock"
        android:dependency="pref_item_password_lock"/>
    <Preference
        android:layout="@layout/preference_with_arrow"
        android:title="@string/label_for_passlock_hint"
        android:key="pref_item_hint_password_lock"
        android:summary="@string/description_for_passlock_hint"
        android:dependency="pref_item_password_lock"/>
    <Preference
        android:enabled="false"
        android:layout="@layout/layout_preference_password_summary"
        android:title="@string/description_for_passlock_footer"/>
</PreferenceScreen>
