<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:textSize="20dp"
        android:id="@+id/btn_stop_play_audio"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/layout_audio_stop"
        android:layout_below="@+id/btn_start_play_audio"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/layout_audio_send"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_discard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/layout_audio_discard"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:textSize="20dp"
        android:id="@+id/btn_start_play_audio"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/layout_audio_play"
        android:layout_alignParentRight="true"/>
    <TextView
        android:textSize="25dp"
        android:id="@+id/Timechek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/layout_audio_timer"
        android:layout_above="@+id/btn_send"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
