<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/ics_main_background_color_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/ics_main_font_color_2"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="74dp"
        android:text="@string/setting_about_btn1_text"/>
    <ImageView
        android:layout_gravity="center"
        android:background="@color/color_palette_12"
        android:layout_width="720dp"
        android:layout_height="1dp"/>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/ics_main_font_color_2"
        android:layout_gravity="center"
        android:id="@+id/textView2"
        android:paddingLeft="16dp"
        android:layout_width="720dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/setting_about_disclaimer_txt"/>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:id="@+id/LinearLayout02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:textSize="18sp"
            android:id="@+id/setting_about_btn1"
            android:layout_width="350dp"
            android:layout_height="57dp"
            android:layout_marginRight="10dp"
            android:text="@string/setting_disclaimer_terms"
            android:layout_weight="1"/>
        <Button
            android:textSize="18sp"
            android:id="@+id/setting_about_btn2"
            android:layout_width="350dp"
            android:layout_height="57dp"
            android:layout_marginLeft="10dp"
            android:text="@string/setting_disclaimer_policy"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:textSize="18sp"
        android:layout_gravity="center"
        android:id="@+id/setting_about_btn3"
        android:layout_width="720dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:text="@string/setting_disclaimer_accept"/>
</LinearLayout>
